# project-XTJS

./: .dockerignore  .env.example  .gitignore  2.json  3.json  5.json  7.json  Dockerfile  Makefile  README.md  bid.json  docker-compose.gpu.yml  docker-compose.yml  extracted_model_segments.json  extracted_test_segments.json  final_report.html  model.json  pyproject.toml  report_宏银商务标.html  report_征盛商务标.html  report_戎元商务标.html  report_智税商务标.html  report_舒源商务标.html  report_链坤商务标.html  requirements.txt  response.json  result_consistency.json  result_integrity.json  run.py  tender.json  test.json  test.py  test_modules.py  药品分析结果.json
_test/: model.json  test_itemized_pricing_0925.py  test_itemized_pricing_427.py  test_itemized_pricing_450.py  test_modules.py
api/controllers/: auth_controller.py
api/routes/: auth.py
app/: main.py
app/config/: __init__.py  minio.py  ocr.py  postgresql.py  recognition_schema.py  response.py  settings.py
app/core/: document_types.py  response.py  security.py
app/model/: analysis.py  postgresql_model.py
core/: database.py
details/: detail_0.html  detail_1.html  detail_10.html  detail_11.html  detail_12.html  detail_13.html  detail_14.html  detail_15.html  detail_2.html  detail_3.html  detail_4.html  detail_5.html  detail_6.html  detail_7.html  detail_8.html  detail_9.html
docs/: 前端接口对接文档.md  对象存储与冷热分层.md  项目总结.md
reports/: all_projects_full_pipeline_summary.html  all_projects_full_pipeline_summary.json  drug_full_pipeline_results.json  drug_full_pipeline_summary.html  full_pipeline_450_results.json  full_pipeline_450_summary.html  local_technical_dup_check_exact_evidence.json  local_technical_dup_check_exact_only.json  local_technical_dup_check_result.json  six_projects_rereview_20260521.md  typo_review_summary.json  typo_review_visualization.html
scripts/: run_unified_business_review.py
tests/: test_integrity_legal_representative.py  test_itemized_normal_mode.py  test_itemized_pricing.py  test_itemized_rate_mode.py  test_project_folder_check_cli.py  test_project_ocr_resume.py
tmp/: reocr_missing_technical_bids.py  repair_minio_missing_objects.py
tools/: ab_personnel_ner.py  export_project_reports_from_pg.py  migrate_blobs_to_minio.py  project_folder_check_cli.py  render_static_result_report.py  run_full_business_pipeline.py  setup_minio_lifecycle.py
utils/: auth.py
出口退税/: 招标文件.json  智税商务标.json  链坤商务标.json
药品JSON识别结果/: 宏银技术标.JSON  戎元技术标.JSON  招标.JSON  舒源技术标.JSON
(+245 files in other folders)
