[project]
name = "project-xtjs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "alembic>=1.12.0",
    "celery>=5.6.2",
    "chardet<8",
    "fastapi==0.104.1",
    "minio>=7.2.20",
    "numpy>=1.26.4,<3",
    "opencv-contrib-python==4.10.0.84",
    "paddleocr[doc-parser]==3.4.0",
    "paddlenlp>=2.6,<2.7",
    "PyMuPDF>=1.24,<2",
    "pydantic-settings>=2.0.0",
    "pypinyin>=0.55",
    "psutil>=5.9,<8",
    "psycopg2-binary==2.9.10",
    "python-docx>=1.1.2",
    "python-dotenv>=1.2.2",
    "python-multipart==0.0.6",
    "redis>=7.2.1",
    "requests",
    "sqlalchemy>=2.0.0",
    "hanlp>=2.1.3",
    "tqdm",
    "urllib3<2.0",
    "uvicorn==0.24.0.post1",
    "watchfiles>=0.21.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
]
